--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,9 @@
 
 @import 'blocks/promo.scss';
 @import 'blocks/header.scss';
-@import 'blocks/buttons.scss'
+@import 'blocks/buttons.scss';
+@import 'blocks/advantages.scss';
+@import 'blocks/titles.scss';
+
+
+
