--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -16,4 +16,16 @@
         font-size: 16px;
 
     }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        color:#FFFFFF;
+        font-size: 16px;
+    }
+
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+    }
 }
