--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -1,7 +1,14 @@
 .title {
-    display: block;
+    
     color: #0d0d0d;
     font-size: 30px;
     font-weight: 700;
     text-align: center;
+    text-transform: uppercase;
+
+    &_left {
+        color: white;
+        font-size: 36px;
+        text-align: left;
+    }
 }
