--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,9 @@
 @import 'blocks/forms.scss';
 @import 'blocks/carousel.scss';
 @import 'blocks/catalog.scss';
+@import 'blocks/reviews.scss';
+@import 'blocks/footer.scss';
+@import 'blocks/modal.scss';
 
 
 
